@@ -1,15 +1,9 @@
 #!python3 fakereqman.py
-#:valid:1 THIS --b
+#:valid:ERROR THIS                  # non-sense
 
 # -*- coding: utf-8 -*-
 #--------------------------------------------------------------
 # ^^^^^ REAL SHEBANG ^^^^^ (real test with real reqman sources)
 #    (works in vs code, press F5)
 #--------------------------------------------------------------
-
-- GET: http://localhost:11111/get_txt
-  tests:
-    - status: 200
-  params:
-    timeout: gfsdgfdsgfds
-
+- if: <<unknown>>       # a if only -> non sens
