@@ -1,15 +1,16 @@
 #!python3 fakereqman.py
-#:valid:1 THIS --b
+#:valid:ERROR THIS 
 
 # -*- coding: utf-8 -*-
 #--------------------------------------------------------------
 # ^^^^^ REAL SHEBANG ^^^^^ (real test with real reqman sources)
 #    (works in vs code, press F5)
 #--------------------------------------------------------------
-
+- conf:
+    v200: 200
+  hello:                            # <-- not other entry in conf statement !
+    nimp
 - GET: http://localhost:11111/get_txt
   tests:
-    - status: 200
-  params:
-    timeout: gfsdgfdsgfds
+    - status: <<v200>>
 
